[package]
name = "hibana-mgmt"
version = "0.1.0"
edition = "2024"
description = "Management prefixes and payload owners for hibana"
license = "MIT OR Apache-2.0"
repository = "https://github.com/hibanaworks/hibana-mgmt"
homepage = "https://github.com/hibanaworks/hibana-mgmt"
documentation = "https://docs.rs/hibana-mgmt"
readme = "README.md"

[features]
default = []
std = ["hibana/std"]

[dependencies]
hibana = { git = "https://github.com/hibanaworks/hibana", rev = "36eba85bd176e4791675db383e41e0b6449ca553", default-features = false }
hibana-epf = { git = "https://github.com/hibanaworks/hibana-epf", rev = "faaf41d0d2be10d7e5787503ab9b728d5392460b", default-features = false }
