[package]
name = "hibana-mgmt"
version = "0.1.0"
edition = "2024"
description = "Management prefixes and payload owners for hibana"
license = "MIT OR Apache-2.0"
repository = "https://github.com/hibanaworks/hibana-mgmt"
homepage = "https://github.com/hibanaworks/hibana-mgmt"
documentation = "https://docs.rs/hibana-mgmt"
readme = "README.md"

[features]
default = []
std = ["hibana/std"]

[dependencies]
hibana = { git = "https://github.com/hibanaworks/hibana", rev = "86c6ee82d3eabaeae6e178866f6475e468e7d804", default-features = false }
hibana-epf = { git = "https://github.com/hibanaworks/hibana-epf", rev = "8c0e521c312ad6be63b6145b92e0d94fc6f3fa3c", default-features = false }
