[package]
name = "hibana-mgmt"
version = "0.1.0"
edition = "2024"
description = "Management prefixes and payload owners for hibana"
license = "MIT OR Apache-2.0"
repository = "https://github.com/hibanaworks/hibana-mgmt"
homepage = "https://github.com/hibanaworks/hibana-mgmt"
documentation = "https://docs.rs/hibana-mgmt"
readme = "README.md"

[features]
default = []
std = ["hibana/std"]

[dependencies]
hibana = { git = "https://github.com/hibanaworks/hibana", rev = "391eb241cb7c3afac26b9caebff62290438d8359", default-features = false }
hibana-epf = { git = "https://github.com/hibanaworks/hibana-epf", rev = "cf6e3179c8d94267b0eed64cba7f395831ca0817", default-features = false }
